Opened 17 years ago
Closed 17 years ago
#1438 closed bug (fixed)
KDL When unmounting other beos partition
Reported by: | cebif | Owned by: | axeld |
---|---|---|---|
Priority: | critical | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If I mount my BeOS5MaxEditionV3.1b1 partition and do something on that partition like opening a text file or an application from that partition like Netpositive then after awhile close it and close all the tracker folders. When I right click on the Desktop and unmount that partition I get KDL. This bug does not happen every time. It seems to be random but similar circumstances. While it was in KDL I gor a stack crawl and took a digital photo of the screen, so I can upload this as an attachment. The version I was testing is: hrev22114 on it's own partition.
Attachments (2)
Change History (15)
by , 17 years ago
Attachment: | kif_0030 (Modified (2)).jpg added |
---|
comment:1 by , 17 years ago
I hope this image is clear enough to read. Depending on your eyesight it might be necessary to copy it to another image viewer and zoom in.
comment:2 by , 17 years ago
Component: | - General → System/Kernel |
---|---|
Priority: | normal → critical |
It'll do, thanks :-)
follow-ups: 4 7 comment:3 by , 17 years ago
I get similar results when mounting my BeOSMax4.1 partition and opening a file on it, except I don't get dropped into KDL mine just crashes the tracker. I can then ctrl-alt-del and restart the desktop. Same thing also happens if I try to open or copy any files from a BFS formated CD-ROM. I'll try it again tonight and post a screenshot of the debug if that would be helpful.
follow-up: 6 comment:4 by , 17 years ago
Replying to scottmc:
I get similar results when mounting my BeOSMax4.1 partition and opening a file on it, except I don't get dropped into KDL mine just crashes the tracker. I can then ctrl-alt-del and restart the desktop. Same thing also happens if I try to open or copy any files from a BFS formated CD-ROM. I'll try it again tonight and post a screenshot of the debug if that would be helpful.
EDIT: Ok now I am getting dumped into KDL. This happens when copying more than 200Meg of files or a single file that is larger than about 200Meg. I haven't pinned down the exact limit but could if that would be helpful. I took a picture of the screen just as cebif did and looks to be tracker related as well.
by , 17 years ago
Attachment: | kdl-200mg.jpg added |
---|
comment:5 by , 17 years ago
I managed to cause the bug again. To make it happen you need to spend quite a long time in the other partition and maybe trying to open applications that are not properly supported in haku but definitely trying lots of different applications.
comment:6 by , 17 years ago
Replying to scottmc:
Replying to scottmc:
I get similar results when mounting my BeOSMax4.1 partition and opening a file on it, except I don't get dropped into KDL mine just crashes the tracker. I can then ctrl-alt-del and restart the desktop. Same thing also happens if I try to open or copy any files from a BFS formated CD-ROM. I'll try it again tonight and post a screenshot of the debug if that would be helpful.
EDIT: Ok now I am getting dumped into KDL. This happens when copying more than 200Meg of files or a single file that is larger than about 200Meg. I haven't pinned down the exact limit but could if that would be helpful. I took a picture of the screen just as cebif did and looks to be tracker related as well.
The second part of scottmc comment relates to bug #517. I was able to reproduce it when I copied my downloads folder from other beos partition; over 1gb size.
follow-up: 10 comment:7 by , 17 years ago
Replying to scottmc:
I get similar results when mounting my BeOSMax4.1 partition and opening a file on it, except I don't get dropped into KDL mine just crashes the tracker.
If Tracker crashes it has nothing to do with the other bug, so please open a new bug report for that one, then.
There are many ways to crash Haiku, they just don't all belong to the same ticket :-)
comment:8 by , 17 years ago
One way that is certain to cause this every time is: open beshare from other beos partition and start downloading something into the default beshare folder. Disconnect from the server. Exit from beshare. Unmount the Other beos partition. Result is KDL. I am not certain if this is because of writing data to the mounted partition or because of beshare but in the back trace beshare is not shown.
comment:9 by , 17 years ago
Another certain way to cause this bug is to copy a wav file from an audio CD on to the other beos partition. Exit from the Tracker window. Unmount the beos partition. KDL is the result. So far all the repeatable ways I have found involve writing files to the other beos partition. The files have to be a reasonable size. Not just a few kb's as in a text file (exception to this was downloading a few 100 kb's in beshare) but a few mb's.
follow-up: 11 comment:10 by , 17 years ago
If Tracker crashes it has nothing to do with the other bug, so please open a new bug report for that one, then.
There are many ways to crash Haiku, they just don't all belong to the same ticket :-)
--The second part of scottmc comment relates to bug #517. --I was able to reproduce it when I copied my downloads folder from other beos --partition; over 1gb size.
Correct, my problem is #517 exactly, missed that one when I was searching. I have copied 195meg from a BeOS partition to Haiku with no issues, but the error shows up when I try something over 500meg. I'll do some more testing and see if I can pinpoint the exact limit and post it as a follow up on #517 report.
comment:11 by , 17 years ago
Replying to scottmc:
Correct, my problem is #517 exactly, missed that one when I was searching. I have copied 195meg from a BeOS partition to Haiku with no issues, but the error shows up when I try something over 500meg. I'll do some more testing and see if I can pinpoint the exact limit and post it as a follow up on #517 report.
Thanks, but there is no need to; it's not an actual bug, but rather an unimplemented feature, and I know exactly why this happens :-)
comment:12 by , 17 years ago
get_mount() doesn't look good. It locks only sMountMutex, but increments the root vnode's reference count. While unmounting it is no longer safe to assume, that the mount has a reference to its root node.
Stack Crawl in KDL image