Fixed get_mount(). It must also acquire the vnode lock before trying to increment the root node vnode reference count. Otherwise it could race with fs_unmount(). Fixes bug #1438.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22203 a95241bf-73f2-0310-859d-f6bbb57e9c96